# repositories-app

./: .gitignore  Cargo.toml  Makefile.toml  README.md  Untitled.sql  index.html
.github/: funding.yml
api/: Cargo.toml  Makefile.toml  README.md  wrangler.toml
api/src/: icons.rs  lib.rs  macros.rs
api/src/github/: mod.rs
api/src/github/repo_icons/: badges.rs  mod.rs  primary_heading.rs  readme_image.rs
api/src/icons/: info.rs  mod.rs
api/src/icons/info/: ico.rs  jpeg.rs  mod.rs  png.rs
api/src/icons/size/: mod.rs
api/worker/: worker.js
extension/: README.md  manifest.json  package.json  tsconfig.json
extension/scripts/: tsconfig.json  webpack.config.ts
extension/src/: Menu.svelte  MenuDivider.svelte  MenuItem.svelte  Portal.svelte  background.ts
extension/src/Link/: Link.svelte  LinkMenu.svelte  index.ts  parseLink.ts
extension/src/background/: background.ts
extension/src/content/: content.ts  native.ts  watchSelector.ts
fs/: Cargo.toml  Makefile.toml  README.md
fs/src/: main.rs
fs/src/database/: schema.rs
fs/src/fs/: mod.rs  path.rs
fs/src/github/: blob.rs  branches.rs  mod.rs  repo.rs  tree.rs  tree_entry.rs  user.rs
fs/src/icon_manager/: mod.rs  rsrc.rs
migrations/20170124012402_setup/: up.sql
src/: filesystem.rs  macros.rs  main.rs  main2.rs
src/database/: mod.rs  models.rs  schema.rs
src/fs/: mod.rs  path.rs  path_parser.rs
src/github/: Repos.gql  blob.rs  branches.rs  mod.rs  repo.rs  tree.rs  tree_entry.rs  user.rs
src/icon_manager/: mod.rs  renderer.rs  rsrc.rs
