[package]
authors = ["Sam Denty <sam@samdenty.com>"]
edition = "2018"
name = "repositories"
version = "0.1.0"

[dependencies]
byteorder = "1.3.4"
colored = "2"
diesel = {version = "1.4.4", features = ["sqlite"]}
diesel_migrations = "1.4.0"
failure = "0.1.8"
lazy_static = "1.4.0"
# fuse = {git = "https://github.com/zargony/fuse-rs"}
chrono = "0.4"
derive_builder = "0.9.0"
fuse = "0.3.1"
fuse_mt = "0.5.1"
github-rs = "0.7.0"
headless_chrome = {version = "0.9.0"}
hex-literal = "0.3.1"
icns = "0.3.1"
libc = "0.2.51"
once_cell = "1.5.2"
parking_lot = {version = "0.11.1", features = ["serde"]}
reqwest = {version = "0.10", features = ["json"]}
rustbreak = {version = "2.0.0", features = ["yaml_enc"]}
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"
sled = "0.34.6"
time = "0.1"
tokio = {version = "0.2", features = ["full"]}

[dev-dependencies]
env_logger = "0.6.0"
