[package]
authors = ["Sam Denty <sam@samdenty.com>"]
edition = "2018"
name = "repositories"
version = "0.1.0"

[dependencies]
byteorder = "1.3.4"
colored = "2"
diesel = { git = "https://github.com/diesel-rs/diesel", features = ["sqlite"] }
diesel_migrations = { git = "https://github.com/diesel-rs/diesel", path = "diesel_migrations" }
failure = "0.1.8"
graphql_client = "0.9.0"
image = "0.23.12"
lazy_static = "1.4.0"
chrono = "0.4"
derive_builder = "0.9.0"
fuse = "0.3.1"
fuse_mt = { git = "https://github.com/samdenty/fuse-mt", branch = "tokio-1.0" }
github-rs = "0.7.0"
headless_chrome = { version = "0.9.0" }
hex-literal = "0.3.1"
icns = { git = "https://github.com/samdenty/rust-icns", branch = "image-rs" }
libc = "0.2.81"
once_cell = "1.5.2"
parking_lot = { version = "0.11.1", features = ["serde"] }
reqwest = { git = "https://github.com/messense/reqwest", branch = "tokio-0-3", features = ["json", "blocking", "stream"] }
rustbreak = { version = "2.0.0", features = ["yaml_enc"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sled = "0.34.6"
futures = "0.3.8"
time = "0.1"
tokio = { version = "1.0.1", features = ["full"] }
tokio-util = { version = "0.6.0", features = ["io"] }

[patch.crates-io]
fuse-mt = { path = "../fuse-mt" }
icns = { path = "../rust-icns" }

[dev-dependencies]
env_logger = "0.8.2"
