[workspace]
members = ["fs", "api"]

[patch."https://github.com/samdenty/rust-icns"]
icns = { path = "../rust-icns" }

[patch."https://github.com/samdenty/rust-headless-chrome"]
headless_chrome = { path = "../rust-headless-chrome" }

[patch."https://github.com/samdenty/fuse-mt"]
fuse_mt = { path = "../fuse-mt" }

[patch."https://github.com/samdenty/reqwest"]
reqwest = { path = "../reqwest" }

[patch.crates-io]
image = { path = "../image" }
