[package]
name = "api"
version = "0.1.0"
authors = ["Sam Denty <sam@samdenty.com>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
itertools = "0.10.0"
console_log = "0.2.0"
regex = "1"
log = "0.4.13"
lol_html = "0.2.0"
once_cell = "1.5.2"
scraper = "0.12.0"
tokio-byteorder = { git = "https://github.com/samdenty/tokio-byteorder", features = ["futures"] }
web-sys = { version = "0.3.46", features = ['console'] }
byteorder = "1.4.2"
data-url = "0.1.0"
mime = { git = "https://github.com/hyperium/mime" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
reqwest = { git = "https://github.com/samdenty/reqwest", features = ["json", "cookies", "blocking", "stream"] }
wasm-bindgen-futures = "0.4.18"
futures = "0.3.8"
wasm-bindgen = "0.2.69"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"
